# octree

./: .gitignore  .gitmodules  BUILD  BackUp2CMakeLists.txt  CMakeCache.txt  CMakeLists.txt  WORKSPACE  benchmark.cc  client.cc  common.cc  common.h  concat.py  config.h  decode.hpp  encode.cc  encode.hpp  hello.cpp  id_rsa_local  main.cc  readme.md  server.cc  setup.sh  simulate_network.sh  ssim.py  stop.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
analysis/: run.py  run.txt  run1.txt  run_0_1_loss.txt  run_0_5_loss.txt  run_1p_reorder.txt  run_5p_reorder.txt
analysis/data/: baseline_cpu.csv  baseline_storage.csv
automation/: analyze.py  cwd.sh  master-analyze.py  master-buffer-analyze.py  master-buffer.sh  master.sh  paper-analyze.py  qlog-analysis.py  script.sh
cmake/: FindJsonCpp.cmake  FindWebP.cmake
cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
echo/: EchoClient.h  EchoServer.h  main.cpp
libs/: JpegDecoder.cpp  JpegDecoder.hpp  JpegEncoder.cpp  JpegEncoder.hpp  utils.py
libs/jpeg-turbo/2.1.5.1/: INSTALL_RECEIPT.json
libs/jpeg-turbo/2.1.5.1/lib/: libjpeg.8.2.2.dylib  libturbojpeg.0.2.0.dylib
libs/libavif/1.0.1/: INSTALL_RECEIPT.json
libs/libavif/1.0.1/.brew/: libavif.rb
libs/libavif/1.0.1/lib/: libavif.16.0.1.dylib  libavif.16.dylib
libs/libavif/1.0.1/lib/cmake/libavif/: libavif-config-release.cmake
libs/libavif/1.0.1/lib/pkgconfig/: libavif.pc
libs/libwebp-mac/doc/: cwebp.html  dwebp.html  gif2webp.html  img2webp.html  vwebp.html  webpinfo.html  webpmux.html
quic_benchmarks/: run.py  run_starttime.py  run_twoexps.py
quic_benchmarks/cpu/: cpu-log-0  cpu-log-1  cpu-log-10  cpu-log-1234  cpu-log-2  cpu-log-3  cpu-log-4  cpu-log-5  cpu-log-6  cpu-log-7  cpu-log-8  cpu-log-9  linux_cubic.txt  linux_cubic2.txt  monitor.sh  quic.txt  quic_bbr.txt  quic_cubic.txt  quic_cubic2.txt
quic_benchmarks/data/: 0bytes.csv  0e2etime.csv  0starttime.csv  0time.csv  10bytes.csv  10time.csv  11bytes.csv  11time.csv  12bytes.csv  12time.csv  17e2etime.csv  17time.csv  18e2etime.csv  18time.csv  1dg_time.csv  1stream_time.csv  20e2etime.csv  20time.csv  29bytes.csv  29e2etime.csv  29time.csv  2dg_bytes.csv  2dg_time.csv  2stream_bytes.csv  2stream_time.csv  30bytes.csv  30e2etime.csv  30time.csv  31bytes.csv  31e2etime.csv  31time.csv  32bytes.csv  32e2etime.csv  32time.csv  33bytes.csv  33e2etime.csv  33time.csv  34bytes.csv  34e2etime.csv  34time.csv  (+187 more)
quic_test/: EchoClient.h  EchoHandler.h  EchoServer.h  TestUtils.h  main.cpp
src/: colors.h  colors.hpp  common.cc  common.cpp  common.h  decode.h  encode.h  encode.hpp  hello.cpp  main.cc  main.cpp  sample.cpp
src/echo/: EchoServer.h  main.cpp
src/octavius_transport/: client.hpp  server.hpp
src/quality_test/: hausdorff.cpp  ssim.cpp
src/quiche_transport/: client.cc  config.h  server.cc  utils.h
src/transport/: auto_client.cc  client.hpp  config.h  man_client.cc  server.cc  simulate_network.sh
transport/: auto_client.cc  client.hpp  config.h  man_client.cc  server.cc
